# lin-alg-studio

./: README.md  pyproject.toml
src/lin_alg/: matrix.py
src/tests/: test_matrix.py  test_matrixTypes.py
